Crd_GSN/Crd_GSN/config.h

GT_API GT_SaveConfig(char *pFile);
GT_API GTN_SaveConfig(short core,char *pFile);
GT_API GT_SaveTerminalConfig(short core,char *pFile);
GT_API GTN_SaveTerminalConfig(short core,char *pFile);
GT_API GT_SaveExtModuleConfig(short core,char *pFile);
GT_API GTN_SaveExtModuleConfig(short core,char *pFile);