Coordinate1.4/Crd/Crd/gts.cs


        [DllImport("gts.dll")]
        public static extern short GT_LoadConfig(ref string pFile);
        [DllImport("gts.dll")]
        public static extern short GT_SaveConfig(string pFile);
        [DllImport("gts.dll")]
        public static extern short GT_LoadTerminalConfig(short core,ref string pFile);
        [DllImport("gts.dll")]
        public static extern short GT_SaveTerminalConfig(short core,out string pFile);
        [DllImport("gts.dll")]
        public static extern short GT_LoadExtModuleConfig(short core,ref string pFile);
        [DllImport("gts.dll")]
        public static extern short GT_SaveExtModuleConfig(short core,out string pFile);
        [DllImport("gts.dll")]
        public static extern short GT_AlarmOff(short axis);
        [DllImport("gts.dll")]
        public static extern short GT_AlarmOn(short axis);
        [DllImport("gts.dll")]
        public static extern short GT_LmtsOn(short axis,short limitType);
        [DllImport("gts.dll")]
        public static extern short GT_LmtsOff(short axis,short limitType);
        [DllImport("gts.dll")]
        public static extern short GT_StepDir(short step);
        [DllImport("gts.dll")]
        public static extern short GT_StepPulse(short step);
        [DllImport("gts.dll")]
        public static extern short GT_StepOrthogonal(short step);
        [DllImport("gts.dll")]
        public static extern short GT_SetMtrBias(short dac,short bias);
        [DllImport("gts.dll")]
        public static extern short GT_GetMtrBias(short dac,out short pBias);
        [DllImport("gts.dll")]
        public static extern short GT_SetMtrLmt(short dac,short limit);
        [DllImport("gts.dll")]
        public static extern short GT_GetMtrLmt(short dac,out short pLimit);
        [DllImport("gts.dll")]
        public static extern short GT_SetSense(short dataType,short dataIndex,short value);
        [DllImport("gts.dll")]
        public static extern short GT_GetSense(short dataType,short dataIndex,out short pValue);
        [DllImport("gts.dll")]
        public static extern short GT_EncOn(short encoder);
        [DllImport("gts.dll")]
        public static extern short GT_EncOff(short encoder);
        [DllImport("gts.dll")]
        public static extern short GT_SetPosErr(short control,Int32 error);
        [DllImport("gts.dll")]
        public static extern short GT_GetPosErr(short control, out Int32 pError);
        [DllImport("gts.dll")]
        public static extern short GT_SetStopDec(short profile,double decSmoothStop,double decAbruptStop);
        [DllImport("gts.dll")]
        public static extern short GT_GetStopDec(short profile,out double pDecSmoothStop,out double pDecAbruptStop);
        [DllImport("gts.dll")]
        public static extern short GT_CtrlMode(short axis,short mode);
        [DllImport("gts.dll")]
        public static extern short GT_SetStopIo(short axis,short stopType,short inputType,short inputIndex);
        [DllImport("gts.dll")]
        public static extern short GT_SetAdcFilterPrm(short adc,double k);
        [DllImport("gts.dll")]
        public static extern short GT_GetAdcFilterPrm(short adc,out double pk);
        [DllImport("gts.dll")]
        public static extern short GT_SetAxisPrfVelFilter(short axis,short filterNumExp);
        [DllImport("gts.dll")]
        public static extern short GT_GetAxisPrfVelFilter(short axis,out short pFilterNumExp);
        [DllImport("gts.dll")]
        public static extern short GT_SetAxisEncVelFilter(short axis,short filterNumExp);
        [DllImport("gts.dll")]
        public static extern short GT_GetAxisEncVelFilter(short axis,out short pFilterNumExp);
        [DllImport("gts.dll")]
        public static extern short GT_SetProfileScale(short i, Int32 alpha, Int32 beta);
        [DllImport("gts.dll")]
        public static extern short GT_GetProfileScale(short i, out Int32 pAlhpa, out Int32 pBeta);
        [DllImport("gts.dll")]
        public static extern short GT_SetEncoderScale(short i, Int32 alpha, Int32 beta);
        [DllImport("gts.dll")]
        public static extern short GT_GetEncoderScale(short i, out Int32 pAlhpa, out Int32 pBeta);
        [DllImport("gts.dll")]
        public static extern short GT_SetAuEncoderScale(short i, Int32 alpha, Int32 beta);
        [DllImport("gts.dll")]
        public static extern short GT_GetAuEncoderScale(short i, out Int32 pAlhpa, out Int32 pBeta);
        [DllImport("gts.dll")]
        public static extern short GTN_LoadConfig(short core,string pFile);
        [DllImport("gts.dll")]
        public static extern short GTN_SaveConfig(short core,string pFile);
        [DllImport("gts.dll")]
        public static extern short GTN_LoadTerminalConfig(short core,string pFile);
        [DllImport("gts.dll")]
        public static extern short GTN_SaveTerminalConfig(short core,string pFile);
        [DllImport("gts.dll")]
        public static extern short GTN_LoadExtModuleConfig(short core,string pFile);
        [DllImport("gts.dll")]
        public static extern short GTN_SaveExtModuleConfig(short core,string pFile);
        [DllImport("gts.dll")]
        public static extern short GTN_AlarmOn(short core,short axis);
        [DllImport("gts.dll")]
        public static extern short GTN_AlarmOff(short core,short axis);
        [DllImport("gts.dll")]
        public static extern short GTN_LmtsOn(short core,short axis,short limitType);
        [DllImport("gts.dll")]
        public static extern short GTN_LmtsOff(short core,short axis,short limitType);
        [DllImport("gts.dll")]
        public static extern short GTN_StepDir(short core,short step);
        [DllImport("gts.dll")]
        public static extern short GTN_StepPulse(short core,short step);
        [DllImport("gts.dll")]
        public static extern short GTN_StepOrthogonal(short core,short step);
        [DllImport("gts.dll")]
        public static extern short GTN_SetMtrBias(short core,short dac,short bias);
        [DllImport("gts.dll")]
        public static extern short GTN_GetMtrBias(short core,short dac,out short pBias);
        [DllImport("gts.dll")]
        public static extern short GTN_SetMtrLmt(short core,short dac,short limit);
        [DllImport("gts.dll")]
        public static extern short GTN_GetMtrLmt(short core,short dac,out short pLimit);
        [DllImport("gts.dll")]
        public static extern short GTN_SetSense(short core,short dataType,short dataIndex,short value);
        [DllImport("gts.dll")]
        public static extern short GTN_GetSense(short core,short dataType,short dataIndex,out short pValue);
        [DllImport("gts.dll")]
        public static extern short GTN_EncOn(short core,short encoder);
        [DllImport("gts.dll")]
        public static extern short GTN_EncOff(short core,short encoder);
        [DllImport("gts.dll")]
        public static extern short GTN_SetPosErr(short core, short control, Int32 error);
        [DllImport("gts.dll")]
        public static extern short GTN_GetPosErr(short core, short control, out Int32 pError);
        [DllImport("gts.dll")]
        public static extern short GTN_SetStopDec(short core,short profile,double decSmoothStop,double decAbruptStop);
        [DllImport("gts.dll")]
        public static extern short GTN_GetStopDec(short core,short profile,out double pDecSmoothStop,out double pDecAbruptStop);
        [DllImport("gts.dll")]
        public static extern short GTN_CtrlMode(short core,short axis,short mode);
        [DllImport("gts.dll")]
        public static extern short GTN_SetStopIo(short core,short axis,short stopType,short inputType,short inputIndex);
        [DllImport("gts.dll")]
        public static extern short GTN_SetAdcFilterPrm(short core,short adc,double k);
        [DllImport("gts.dll")]
        public static extern short GTN_GetAdcFilterPrm(short core,short adc,out double pk);
        [DllImport("gts.dll")]
        public static extern short GTN_SetAxisPrfVelFilter(short core,short axis,short filterNumExp);
        [DllImport("gts.dll")]
        public static extern short GTN_GetAxisPrfVelFilter(short core,short axis,out short pFilterNumExp);
        [DllImport("gts.dll")]
        public static extern short GTN_SetAxisEncVelFilter(short core,short axis,short filterNumExp);
        [DllImport("gts.dll")]
        public static extern short GTN_GetAxisEncVelFilter(short core,short axis,out short pFilterNumExp);
        [DllImport("gts.dll")]
        public static extern short GTN_SetProfileScale(short core, short i, Int32 alpha, Int32 beta);
        [DllImport("gts.dll")]
        public static extern short GTN_GetProfileScale(short core, short i, out Int32 pAlhpa, out Int32 pBeta);
        [DllImport("gts.dll")]
        public static extern short GTN_SetEncoderScale(short core, short i, Int32 alpha, Int32 beta);
        [DllImport("gts.dll")]
        public static extern short GTN_GetEncoderScale(short core, short i, out Int32 pAlhpa, out Int32 pBeta);
        [DllImport("gts.dll")]
        public static extern short GTN_SetAuEncoderScale(short core, short i, Int32 alpha, Int32 beta);
        [DllImport("gts.dll")]
        public static extern short GTN_GetAuEncoderScale(short core, short i, out Int32 pAlhpa, out Int32 pBeta);

        public const short CAPTURE_HOME                =    (1);
        public const short CAPTURE_INDEX               =    (2);
        public const short CAPTURE_PROBE                =   (3);
        public const short CAPTURE_HSIO0                =   (6);
        public const short CAPTURE_HSIO1                =   (7);

        public struct TTrigger
           {
	       	    public short encoder;
	            public short probeType;
	            public short probeIndex;
	            public short sense;
                public Int32 offset;
                public UInt32 loop;
	            public short windowOnly;
                public Int32 firstPosition;
                public Int32 lastPosition;
           }

        public struct TTriggerAlign
           {
	            public short encoder;
	            public short probeType;
	            public short probeIndex;
	            public short sense;
                public Int32 offset;
                public UInt32 loop;
	            public short windowOnly;
	            public short pad2;
                public Int32 firstPosition;
                public Int32 lastPosition;
           }

        public struct TTriggerStatus
           {
	            public short execute;
	            public short done;
                public Int32 position;
           }
